--- a/src/app/image/image-detail.component.html
+++ b/src/app/image/image-detail.component.html
@@ -21,4 +21,4 @@
 <label style="margin-left: 20px;margin-top: 20px"> Submit-Reason:</label>  <input type="text" style="margin-left: 20px;margin-top: 20px">
 </div>
 <button class="btn btn-primary" (click)="resetStars()" style="margin-left: 20px;margin-top: 20px">Reset rating and status</button>
-<button class="btn btn-primary" routerLink="/gallery" style="margin-left: 20px;margin-top: 20px">submit</button>
+<button class="btn btn-primary" routerLink="/gallery" (click)="submit()" style="margin-left: 20px;margin-top: 20px">submit</button>
