--- a/src/app/gallery/gallery.component.html
+++ b/src/app/gallery/gallery.component.html
@@ -9,6 +9,7 @@
             <a [routerLink] ="['/image', image.id]">
                 <img src="{{image.url}}" class="tn" width="200" height="160">
             </a>
+         <span>{{image.rating}}</span>
         </li>
     </ul>
 </div>
