--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,4 @@
-/* You can add global styles to this file, and also import other style files */
+/* You can add global styles to this file, and also import other style files
 body{
     font-family: 'Lato', sans-serif;
     color: #ccc;
@@ -13,4 +13,4 @@ body{
   h1 h2 h3 h4 h5{
     font-family: 'Monteserrat', sans-serif;
     color: #333;
-  }
+  } */
